Gen: 优化一处生成的代码