@@ -55,7 +55,7 @@ public final class tBoolList extends TableX<Zeze.Builtin.Collections.BoolList.BK
         var _v_ = new Zeze.Builtin.Collections.BoolList.BKey();
         _p_.add("__key");
         _v_.decodeResultSet(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
         return _v_;
     }
 
@@ -64,7 +64,7 @@ public final class tBoolList extends TableX<Zeze.Builtin.Collections.BoolList.BK
         var _p_ = new java.util.ArrayList<String>();
         _p_.add("__key");
         _v_.encodeSQLStatement(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
     }
 
     @Override
