@@ -52,7 +52,7 @@ public final class tDepartmentTree extends TableX<Zeze.Builtin.Collections.Depar
         var _v_ = new Zeze.Builtin.Collections.DepartmentTree.BDepartmentKey();
         _p_.add("__key");
         _v_.decodeResultSet(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
         return _v_;
     }
 
@@ -61,7 +61,7 @@ public final class tDepartmentTree extends TableX<Zeze.Builtin.Collections.Depar
         var _p_ = new java.util.ArrayList<String>();
         _p_.add("__key");
         _v_.encodeSQLStatement(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
     }
 
     @Override
