@@ -50,7 +50,7 @@ public final class tQueueNodes extends TableX<Zeze.Builtin.Collections.Queue.BQu
         var _v_ = new Zeze.Builtin.Collections.Queue.BQueueNodeKey();
         _p_.add("__key");
         _v_.decodeResultSet(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
         return _v_;
     }
 
@@ -59,7 +59,7 @@ public final class tQueueNodes extends TableX<Zeze.Builtin.Collections.Queue.BQu
         var _p_ = new java.util.ArrayList<String>();
         _p_.add("__key");
         _v_.encodeSQLStatement(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
     }
 
     @Override
