@@ -49,7 +49,7 @@ public final class tAccountOfflineTimers extends TableX<Zeze.Builtin.Timer.BAcco
         var _v_ = new Zeze.Builtin.Timer.BAccountClientId();
         _p_.add("__key");
         _v_.decodeResultSet(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
         return _v_;
     }
 
@@ -58,7 +58,7 @@ public final class tAccountOfflineTimers extends TableX<Zeze.Builtin.Timer.BAcco
         var _p_ = new java.util.ArrayList<String>();
         _p_.add("__key");
         _v_.encodeSQLStatement(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
     }
 
     @Override
